SERVER-6948 Make it safe to call commitIfNeeded() from a read lock